--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,36 @@
 plugins {
     id 'java'
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.8'
 }
 
-group 'org.example'
-version '1.0-SNAPSHOT'
-
-sourceCompatibility = 1.8
+group = 'org.astraljaeger'
+version = '1.0-ALPHA'
+sourceCompatibility = 11
 
 repositories {
     mavenCentral()
+    jcenter()
+    maven { url "https://oss.jfrog.org/artifactory/libs-release"}
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    implementation 'org.xerial:sqlite-jdbc:3.30.1'
+    implementation 'com.github.twitch4j:twitch4j:1.0.0-alpha.17'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
+    implementation 'io.reactivex.rxjava2:rxjavafx:2.2.2'
+    implementation 'org.controlsfx:controlsfx:11.0.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.guava:guava:28.0-jre'
+}
+
+javafx {
+    version = '11.0.2'
+    modules = ['javafx.controls', 'javafx.fxml']
+}
+
+application {
+    mainClassName = 'org.astraljaeger.noticeree.NoticeRee'
 }
