--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+
 plugins {
     id 'java'
     id 'application'
@@ -33,4 +34,10 @@ javafx {
 
 application {
     mainClassName = 'org.astraljaeger.noticeree.NoticeRee'
+}
+
+task greet{
+    group  = 'greetings'
+    description = 'Greets you'
+    doLast {println 'Hello Developer'}
 }
