--- a/build.gradle
+++ b/build.gradle
@@ -23,17 +23,31 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
+    // persistance
     implementation 'org.xerial:sqlite-jdbc:3.30.1'
+    implementation 'org.dizitart:nitrite:3.3.0'
+
+    // twitch api wrapper
     implementation 'com.github.twitch4j:twitch4j:1.0.0-alpha.17'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
-    implementation 'io.reactivex.rxjava2:rxjavafx:2.2.2'
+
+    // Encrypted property store
+    implementation 'org.jasypt:jasypt:1.9.2'
+
+    // Additional controls for fx
     implementation 'org.controlsfx:controlsfx:11.0.1'
+
+    // Project Reactor
+    implementation 'io.projectreactor:reactor-core:3.3.1.RELEASE'
+    implementation 'com.github.shadskii:reactorfx:2.0.0'
+
     // Google dependencies
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.google.guava:guava:28.0-jre'
+
     // Apache Commons
     implementation 'commons-codec:commons-codec:1.13'
     implementation 'commons-io:commons-io:2.6'
+
     // Project Lombok
     implementation 'org.projectlombok:lombok:0.9.2'
     compileOnly 'org.projectlombok:lombok:1.18.10'
