--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,5 +13,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
-    - name: Build with Gradle
+    - name: Build Wrapper
+      run: gradle wrapper
+    - name: Build with Gradlew
       run: ./gradlew build
