--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,13 +5,15 @@ on: [push]
 jobs:
   build:
 
-    runs-on: windows-latest
-
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v1
-    - name: Set up JDK 11
-      uses: actions/setup-java@v1
+    - uses: actions/setup-java@v1
       with:
         java-version: 11
-    - name: Build with Gradlew
-      run: ./gradlew build
+    - uses: eskatos/gradle-command-action@v1
+      with:
+        arguments: build
