--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,13 +7,15 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, windows-latest]
+        java: [11, 12]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v1
     - uses: actions/setup-java@v1
       with:
-        java-version: 11
-    - uses: eskatos/gradle-command-action@v1
-      with:
-        arguments: build
+        java-version: ${{ matrix.java }}
+    - name: Build Gradle wrapper
+      run: gradle wrapper
+    - name: Build with wrapper
+      run: ./gradlew build
