--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@
 plugins {
     id 'java'
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.8'
+    id 'org.openjfx.javafxplugin' version '0.0.9'
+    id "org.sonarqube" version "3.2.0"
 }
 
 group = 'org.astraljaeger'
@@ -25,6 +26,14 @@ dependencies {
     implementation 'org.controlsfx:controlsfx:11.0.1'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.google.guava:guava:28.0-jre'
+}
+
+sonarqube {
+  properties {
+    property "sonar.projectKey", "AstralJaeger_Proj.-NoticeRee"
+    property "sonar.organization", "astraljaeger"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
 }
 
 javafx {
